<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2diagnostics</name>
  <version>0.0.0</version>
  <description>A command line tool to print the diagnostics in a ROS 2 system</description>

  <maintainer email="cposteam@clearpath.ai">Clearpath OS Team</maintainer>

  <license>BSD</license>

  <author email="yhuang@ottomotors.com">Yolanda Huang</author>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2cli</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
