<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2graph</name>
  <version>0.0.0</version>
  <description>
    The graph command for ROS 2 command line tools. This command generate a DOT format file representing the ROS2 node graph. This is a more lightweight version of the traditional rqt_graph command.
  </description>
  <maintainer email="cposteam@clearpath.ai">Clearpath OS Team</maintainer>
  <license>BSD</license> 

  <author email="gautran@clearpath.ai">Guillaume Autran</author>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2cli</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
